# random-person-name

./: .gitignore  Cargo.toml  README.md
src/: char_types.rs  lib.rs  name.rs  ngramweights.rs  test_input_names.rs  traversal.rs  validchars.rs
src/tests/: mod.rs  test_input_names.rs
