[package]
name = "random-person-name"
description = "A markov chain based approach to random name generation. Allows a user to define positive and negative weights for character ngrams."
authors = ["Nikhil Sriram W. <nikhil.sriram5@gmail.com>"]
keywords = ["random","name","character","culture","creative"]
repository = "https://github.com/NSriram5/random-person-name"
readme = "README.md"
license ="MIT"
version = "0.1.0"
edition = "2021"
exclude = ["src/test_input_names.rs"]

[dependencies]
fastrand = "2.3.0"

